--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -28,7 +28,7 @@ In Chapter \ref{ch:the-basic-idea}, I suggested that languages of the internal-o
 \begin{figure}[htbp]
   \center
   \begin{tabular}[b]{ccc}
-      % \toprule
+      \toprule
       light head & & relative pronoun \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
@@ -53,7 +53,7 @@ In Chapter \ref{ch:the-basic-idea}, I suggested that languages of the internal-o
           ]
       ]
     \end{forest}\\
-      % \bottomrule
+      \bottomrule
   \end{tabular}
    \caption {\tsc{lh} and \tsc{rp} in the internal-only type}
   \label{fig:rel-lh-intonly-simple}
@@ -68,7 +68,7 @@ In Chapter \ref{ch:typology}, I showed that Modern German is a language of the i
 \begin{figure}[htbp]
   \center
   \begin{tabular}[b]{ccc}
-      % \toprule
+      \toprule
       light head & & relative pronoun \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
@@ -111,7 +111,7 @@ In Chapter \ref{ch:typology}, I showed that Modern German is a language of the i
             ]
         ]
       \end{forest}\\
-      % \bottomrule
+      \bottomrule
   \end{tabular}
    \caption {\tsc{lh} and \tsc{rp} in Modern German}
   \label{fig:rel-lh-mg}
@@ -132,7 +132,7 @@ Finally, I compare the constituents of the light head and the relative pronoun. 
 
 \section{The Modern German relative pronoun}\label{sec:mg-rel}
 
-In the introduction of this chapter, I suggested that in Modern German features of the relative pronoun are spelled out in such a way that they form the constituency shown in Figure \ref{ex:simple-intonly-rp}.
+In the introduction of this chapter, I suggested that in Modern German features of the relative pronoun are spelled out in such a way that they form the constituency shown in \ref{ex:simple-intonly-rp}.
 
 \ex.\label{ex:simple-intonly-rp}
 \begin{forest} boom
@@ -175,7 +175,7 @@ I argue that Modern German relative pronoun have the structure shown in \ref{ex:
       tikz={
       \node[label=below:\tit{we},
       draw,circle,
-      scale=0.9,
+      scale=0.95,
       fit to=tree]{};
       }
           [\tsc{rel}]
@@ -270,11 +270,11 @@ The feature \tsc{ind} corresponds to number, which is singular if it is not comb
 
 For case, I adopt the features of \citet{caha2009}, already introduced in Chapter \ref{ch:decomposition}. The feature \ac{f}1 and \tsc{f}2 corresponds to the accusative, and the features \ac{f}1, \ac{f}2 and \tsc{f}3 correspond to the dative.
 
-I continue with the pronominal features. Another context in which the final consonants appear is in their use as a pronoun. In \ref{ex:mg-weak}, I give examples of the masculine accusative singular and masculine dative singular.\footnote{
-More specifically, the final consonants correspond to the weak pronoun in Modern German. \citet{cardinaletti1994} split pronouns in three classes: strong pronouns, weak pronouns and clitics. There are several tests that distinguish the types from each other. In what follows, I show that the pronouns in \ref{ex:mg-weak} are neither strong pronouns nor clitics, and therefore, should be classified as weak pronouns. The tests I are are taken from \citet{cardinaletti1994}.
+I continue with the pronominal features. Another context besides in their use as relative pronouns and demonstrative pronouns in which the final consonants appear is as pronouns on their own. In \ref{ex:mg-weak}, I give examples of the masculine accusative singular and masculine dative singular.\footnote{
+To be more precise, the final consonants correspond to the weak pronoun in Modern German. \citet{cardinaletti1994} split pronouns in three classes: strong pronouns, weak pronouns and clitics. Following the tests in \citet{cardinaletti1994} that distinguish the types from each other, the pronouns in \ref{ex:mg-weak} are neither strong pronouns nor clitics, and therefore, should be classified as weak pronouns.
 
-First, I show that \tit{n} and \tit{m} are not strong pronouns because of how they behave under coordination and under focus.
-Strong pronouns can be coordinated. The examples in \ref{ex:wk-pron-coord} illustrate that \tit{n} and \tit{m} cannot be coordinated.
+First, \tit{n} and \tit{m} are not strong pronouns because of how they behave under coordination and under focus.
+Strong pronouns can be coordinated. \tit{n} and \tit{m} cannot be coordinated, as shown in \ref{ex:wk-pron-coord}.
 
 \ex.\label{ex:wk-pron-coord}
 \ag. *Ich wollte Jan und n gestern schon anrufen.\\
@@ -284,57 +284,21 @@ Strong pronouns can be coordinated. The examples in \ref{ex:wk-pron-coord} illus
  I help Jan and 3\tsc{sg}.\tsc{m}.\tsc{acc}.\tsc{wk} his bike to repare\\
  `I help Jan and him repairing his bike.'
 
-Strong pronouns can be focused.
-The examples in \ref{ex:wk-pron-focus} show that \tit{n} and \tit{m} cannot be focused.
+Strong pronouns can be focused, whereas \tit{n} and \tit{m} cannot be focused.
 
-\ex.\label{ex:wk-pron-focus}
-\ag. *Ich wollte nur n anrufen.\\
- I wanted only 3\tsc{sg}.\tsc{m}.\tsc{acc}.\tsc{wk} call\\
- `I wanted to call only him.'
-\bg. *Ich helfe nur m sein Fahrrad zu reparieren.\\
- I help only 3\tsc{sg}.\tsc{m}.\tsc{dat}.\tsc{wk} his bike to repare\\
- `I help only him repairing his bike.'
+Second, the consonants are not clitics because clitics cannot combine with prepositions, but \tit{n} and \tit{m} can, as shown in \ref{ex:wk-pron-prep}.
 
-Second, I show that the consonant is not a clitic because of how they behave with respect to following dative objects and combining with prepositions.
-Clitics can either follow a dative object or precede it. Strong and weak pronouns can only follow it.
-The examples in \ref{ex:wk-pron-order-n} and \ref{ex:wk-pron-order-m} show that \tit{n} and \tit{m} can only follow the dative object \tit{Jan}.
-
-\ex.\label{ex:wk-pron-order-n}
-\ag. .. dass Ursel Jan n empfohlen hat.\\
- {} that Ursel Jan 3\tsc{sg}.\tsc{m}.\tsc{acc}.\tsc{wk} recommended has\\
- `that Ursel recommended him to Jan.'
-\bg. *.. dass Ursel n Jan empfohlen hat.\\
-{} that Ursel 3\tsc{sg}.\tsc{m}.\tsc{acc}.\tsc{wk} Jan recommended has\\
-`that Ursel recommended him to Jan.'
-
-\ex.\label{ex:wk-pron-order-m}
-\ag. .. dass Ursel m Jan empfohlen hat.\\
- {} that Ursel 3\tsc{sg}.\tsc{m}.\tsc{dat}.\tsc{wk} Jan recommended has\\
- `that Ursel recommended Jan to him.'
-\bg. *.. dass Ursel Jan m empfohlen hat.\\
-{} that Ursel Jan 3\tsc{sg}.\tsc{m}.\tsc{dat}.\tsc{wk} recommended has\\
-`that Ursel recommended Jan to him.'
-
-Clitics cannot combine with prepositions.
-The examples in \ref{ex:wk-pron-prep-n} and \ref{ex:wk-pron-prep-m} show that \tit{n} and \tit{m} can combine with prepositions.
-
-\ex.\label{ex:wk-pron-prep-n}
-\ag. Ich habe schon ein Geschenk für n gekauft.\\
- I have already a gift for 3\tsc{sg}.\tsc{m}.\tsc{acc}.\tsc{wk} bought\\
- `I already bought a gift for him.'
-\bg. Ich bin schnell auf n zu gelaufen.\\
+\ex.\label{ex:wk-pron-prep}
+\ag. Ich bin schnell auf n zu gelaufen.\\
  I am fast on 3\tsc{sg}.\tsc{m}.\tsc{acc}.\tsc{wk} to walked\\
  `I walked toward him fast.'
-
-\ex.\label{ex:wk-pron-prep-m}
-\ag. Ich war mit m im Wald wandern.\\
+\bg. Ich war mit m im Wald wandern.\\
  I have already a gift for 3\tsc{sg}.\tsc{m}.\tsc{dat}.\tsc{wk} bought\\
  `I was hiking with him in the woods.'
-\bg. Ich habe Blumen von m bekommen.\\
- I have flowers from 3\tsc{sg}.\tsc{m}.\tsc{dat}.\tsc{wk} received\\
- `I received flowers from him.'
 
-In sum, \tit{n} and \tit{m} are not strong pronouns and not clitics, so they are weak pronouns.}
+Clitics can either follow a dative object or precede it. Strong and weak pronouns can only follow it. \tit{n} and \tit{m} can only follow a dative object.
+
+Since \tit{n} and \tit{m} are not strong pronouns and not clitics, they are weak pronouns.}
 
 \ex.\label{ex:mg-weak}
 \ag. Ich wollte n gestern schon anrufen.\\
@@ -348,8 +312,7 @@ This means that the forms also contain pronominal features.
 \citet{harley2002} claim that all pronouns contain the feature \tsc{ref}, because they are referential expressions.
 \footnote{
 Actually, I propose that two pronominal features are present: \tsc{ref} and Σ. The feature Σ is present because the consonants are weak pronouns \citep{cardinaletti1994}.
-}
-\footnote{
+}\footnote{
 I assume that clitics lack the features \tsc{ref} (which corresponds to the LP in \pgcitealt{cardinaletti1994}{61}) and the feature Σ. Strong pronouns have, in addition to \tsc{ref} and Σ, another feature (C in terms of \pgcitealt{cardinaletti1994}{61}).
 }
 
@@ -403,7 +366,7 @@ The \tit{n} is the nominative masculine singular, so it spells out the features 
 
 Note that the ordering of the features here is not random. I motivate this in Section \ref{sec:combining}.
 
-I continue with the morpheme\tit{we}. Consider Table \ref{tbl:mg-paradigm-dem}.
+I continue with the morpheme\tit{we}. This morpheme corresponds to what I called the \tsc{rel}-feature in Chapter \ref{ch:the-basic-idea} and the introduction to this chapter. Consider Table \ref{tbl:mg-paradigm-dem}.
 
 \begin{table}[H]
 \center
@@ -411,7 +374,7 @@ I continue with the morpheme\tit{we}. Consider Table \ref{tbl:mg-paradigm-dem}.
  \begin{tabular}{ccccc}
  \toprule
              & \ac{m}  & \tsc{n} & \ac{f} & \ac{pl} \\
-   \cmidrule{2-4}
+   \cmidrule{2-5}
    \ac{nom}  & de-r   & da-s   & die   & die    \\
    \ac{acc}  & de-n   & da-s   & die   & die    \\
    \ac{dat}  & de-m   & de-m   & de-r  & de-n   \\
@@ -420,21 +383,13 @@ I continue with the morpheme\tit{we}. Consider Table \ref{tbl:mg-paradigm-dem}.
  \label{tbl:mg-paradigm-dem}
 \end{table}
 
-The morpheme \tit{we} combines with the same endings as the morpheme \tit{de} does in demonstratives (or relative pronouns in headed relatives).\footnote{
+The morpheme \tit{we} combines with the same endings as the morpheme \tit{de} does in demonstrative pronouns (or relative pronouns in headed relatives).\footnote{
 Note that \tsc{wh}-relative pronouns, unlike the demonstratives, do not have a feminine form for the relative pronouns in Table \ref{tbl:mg-paradigm-wh-rels}. Demonstratives also have plural forms, and \tsc{wh}-relative pronouns do not. As far as I know, this holds for all relative pronouns in languages of the internal-only type (cf. also for Finnish, even though it makes a lot of morphological distinctions) and of the matching type. Relative pronouns in languages of the unrestricted type do inflect for feminine, as well as always-external languages. In Chapter \ref{ch:discussion} I return to this observation in relation with the always-external languages.}
 This identifies the \tit{de} and, more importantly for the discussion here, the \tit{we} as a separate morpheme.\footnote{
-Note that the dative forms in all gender and numbers have the \tit{e}, which I assigned to masculine gender. This holds for the genitive forms too, which I have not given here. I see these as arguments in favor the following analysis.
-
-The phonological part of the lexical entries in \ref{ex:mg-entries-nm} should not be \tit{n} and \tit{m} but \tit{en} and \tit{em}.
-Additionally, the lexical entry carries additional information: the lexical entries in \ref{ex:mg-entries-nm} only bring a single slot for a single consonant.
-The lexical entry for the neuter singular nominative and accusative is \tit{as} but only the \tit{s} surfaces due the single consonant slot.
-The feminine singular and the plurals do not have a weak pronoun and they do not have a marker in forms like \tit{diese} `this' (see Table \ref{tbl:mg-dieser}), because their lexical entry does not contain a consonant.
-
-Under this analysis, the lexical entry does not correspond to the phonology \tit{e}. Its phonological contribution is to bring a slot for a vowel. The lexical entry is then also not specified for gender, which correctly captures the observation that \tit{e} appears outside of the masculine.
-
-As this matter is not relevant for the core of my analysis, I put it aside for now. For ease of exposition I assign a phonological exponent to each lexical entry.
+It is also possible to analyze \tit{we} as two separate morphemes: \tit{w} and \tit{e}. This further decomposition would not make a difference for the analysis I propose here. What is crucial is that phi- and case-features correspond to a single morpheme and the other part has its own morpheme or morphemes.
 }
-I suggest that the morpheme \tit{we} spells out three features: \tsc{wh}, \tsc{rel}, \tsc{ind} and \tsc{an}.\footnote{I actually believe that \tit{we} also spells out deixis features. In relative pronouns it does not express spatial deixis, but discourse deixis: it establishes a relation with an antecedent.
+I suggest that the morpheme \tit{we} actually spells out more features than only the feature \tsc{rel}: it also spells out \tsc{wh}, \tsc{ind} and \tsc{an}.\footnote{
+I actually believe that \tit{we} also spells out deixis features. In relative pronouns it does not express spatial deixis, but discourse deixis: it establishes a relation with an antecedent.
 Generally, three types of deixis are distinguished: proximal, medial and distal. I argue that \tit{e} in the relative pronoun corresponds to the medial. Generally speaking, \tsc{wh}-pronouns combine with the medial or the distal. English has morphological evidence for this claim. Demonstratives in English can combine with either the proximal or this medial/distal, as shown in \ref{ex:english-dem}.
 
 \ex.\label{ex:english-dem}
@@ -457,13 +412,55 @@ I adopt the features for deixis distinguished by \citet{lander2018}. The feature
 The difference between the proximal, the medial and the distal cannot be observed in Modern German, because it is syncretic all of them \pgcitep{lander2018}{387}, see Table \ref{tbl:mg-paradigm-dem}.
 
 I leave the deixis features out of the discussion and the lexical entries because they are not relevant for the analysis.}
-%it cannot refer to a plural
-%it refers to animate, not inanimate
 
-The first feature I refer to as \tsc{wh}. This is a feature that \tsc{wh}-pronouns, such as \tsc{wh}-relative pronouns and interrogatives, share. The \tsc{wh}-element triggers the construction of a set of alternatives in the sense of \citet{rooth1985,rooth1992} \citep{hachem2015}. This contrasts with the \tsc{d} in Table \ref{tbl:mg-paradigm-dem}, which is responsible for establishing a definite reference.
+I start with the last two features I mentioned, namely \tsc{ind} and \tsc{an}. Consider Table \ref{tbl:mg-paradigm-wh-rels-rep}, repeated from Table \ref{tbl:mg-paradigm-wh-rels-rep}.
+
+\begin{table}[htbp]
+\center
+\caption {Modern German relative pronouns \pgcitep{durrell2011}{5.3.3}}
+\begin{tabular}{ccc}
+\toprule
+            & \ac{an} & \tsc{inan}\\
+  \cmidrule{2-3}
+  \ac{nom}  & we-r    & wa-s     \\
+  \ac{acc}  & we-n    & wa-s     \\
+  \ac{dat}  & we-m    & -        \\
+\bottomrule
+\end{tabular}
+\label{tbl:mg-paradigm-wh-rels-rep}
+\end{table}
+
+In the different genders, not only the final consonants differ, but also the vowel. This suggests that \tit{we} also realizes gender features.\footnote{
+An alternative to this analysis is to let \tit{wer} correspond to the morphemes in \ref{ex:wer-cv}.
+
+\ex.\label{ex:wer-cv}
+\a. \tit{w} + CV
+\b. \tit{er} + C
+
+Under this analysis, the final consonant actually has a vowel in its lexical entry. This vowel does not surface, however, because there is only a slot for a consonant. Only when the lexical entry combines with a lexical entry that does have a slot for a vowel, the vowel gets to surface.
+
+An theoretical advantage of this analysis is that there is no need to specifiy a \tit{da} and a \tit{de} and a \tit{wa} and a \tit{we} for the different genders. The vowel is part of the lexical entry of the that belongs to the final consonant and it gets to surface because of the vowel slot that the \tit{w} or \tit{d} introduces.
+
+An empirical advantage of this analysis concerns the vowel \tit{e}. The dative forms in all gender and numbers have the \tit{e}, which I assigned to masculine gender. This holds for the genitive forms too, which I have not given here. If \tit{we} is not specified for gender (but maybe still for number) and the vowel belongs to the final consonant, it can be inserted for non-masculines too.
+The feminine singular and the plurals do not have a weak pronoun and they do not have a marker in forms like \tit{diese} `this' (see Table \ref{tbl:mg-dieser}), because their lexical entry does not contain a consonant.
+
+As this matter is not relevant for the core of my analysis, I put it aside for now. For ease of exposition I simply assign a phonological exponent to each lexical entry and I do not make further distinctions in C and V slots.
+}
+
+In addition, \tit{we} expresses \tsc{ind}. It is only possible to have a singular interpretation and not a plural one.
+
+\ex.
+\ag. Wer macht das?\\
+who do.3\tsc{sg} that\\
+`Who is doing that?'
+\b. *Wer machen das?\\
+who do.3\tsc{pl} that\\
+intended: `Who are doing that?'
+
+The next feature I refer to as \tsc{wh}. This is a feature that \tsc{wh}-pronouns, such as \tsc{wh}-relative pronouns and interrogatives, share. The \tsc{wh}-element triggers the construction of a set of alternatives in the sense of \citet{rooth1985,rooth1992} \citep{hachem2015}. This contrasts with the \tsc{d} in Table \ref{tbl:mg-paradigm-dem}, which is responsible for establishing a definite reference.
 The second relevant feature is \tsc{rel}, which establishes a relation.
 
-In sum, the \tit{we} spells out the features \tsc{wh}, \tsc{rel}, \tsc{ind} and \tsc{an} as shown in \ref{ex:mg-entry-w}.
+In sum, the \tit{we} spells out the features \tsc{wh}, \tsc{rel}, \tsc{ind} and \tsc{an} as shown in \ref{ex:mg-entry-we}.
 
 \ex. \begin{forest} boom
   [\tsc{rel}P
@@ -604,7 +601,7 @@ This next feature is the feature \tsc{an}, and a \tsc{an}P is created.
 The syntactic structure forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep}.
 Therefore, the \tsc{an}P is spelled out as \tit{n}, shown in \ref{ex:mg-spellout-n-cl-an}.
 
-\ex.\label{ex:mg-spellout-n-sigma-an}
+\ex.\label{ex:mg-spellout-n-cl-an}
 \begin{forest} boom
   [\tsc{an}P,
   tikz={
@@ -632,7 +629,7 @@ Therefore, the \tsc{ind}P is spelled out as \tit{n}, shown in \ref{ex:mg-spellou
   tikz={
   \node[label=below:\tit{n},
   draw,circle,
-  scale=0.95,
+  scale=0.9,
   fit to=tree]{};
   }
       [\tsc{ind}]
@@ -765,7 +762,7 @@ The newly created phrase is merged as a whole with the already existing structur
       tikz={
       \node[label=below:\tit{n},
       draw,circle,
-      scale=1,
+      scale=0.95,
       fit to=tree]{};
       }
           [\tsc{ind}]
@@ -892,7 +889,7 @@ This syntactic structure namely forms a constituent in the lexical tree in \ref{
        tikz={
        \node[label=below:\tit{we},
        draw,circle,
-       scale=0.9,
+       scale=0.95,
        fit to=tree]{};
        }
           [\tsc{rel}]
@@ -936,7 +933,7 @@ The \tsc{nom}P is spelled out as \tit{r}, and all constituents are merged back i
 \ex.\label{ex:mg-spellout-rel-nom}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
-      [\tsc{rel}P, s sep=55mm
+      [\tsc{rel}P, s sep=45mm
           [\tsc{rel}P,
           tikz={
           \node[label=below:\tit{we},
@@ -986,7 +983,7 @@ It namely forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep}, wh
 \ex.\label{ex:mg-spellout-rel-acc}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
-      [\tsc{rel}P, s sep=60mm
+      [\tsc{rel}P, s sep=50mm
           [\tsc{rel}P,
           tikz={
           \node[label=below:\tit{we},
@@ -1065,7 +1062,7 @@ The \tsc{acc}P is spelled out as \tit{m}, and all constituents are merged back i
 \ex.\label{ex:mg-spellout-rel-dat}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
-      [\tsc{rel}P, s sep=60mm
+      [\tsc{rel}P, s sep=50mm
           [\tsc{rel}P,
           tikz={
           \node[label=below:\tit{we},
@@ -1116,87 +1113,40 @@ To summarize, I decomposed the relative pronoun into the two morphemes \tit{we} 
 
 \section{The Modern German (extra) light head}\label{sec:light-mg}
 
-In Chapter \ref{ch:the-basic-idea}, I argued that headless relatives are derived from light-headed relatives. The light head can be deleted when the light head forms a constituent within the relative pronoun. In internal-only languages, the light head can be deleted as long as the external case is not more complex than the internal case. In internal-only languages, features of the relative pronoun and light head are spelled out in such a way that they form the constituency shown in Figure \ref{fig:rel-lh-intonly-simple-rep}.
+In Chapter \ref{ch:the-basic-idea}, I suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them forms a constituent within other.
 
-\begin{figure}[htbp]
-  \center
-  \begin{tabular}[b]{ccc}
-      % \toprule
-      light head & & relative pronoun \\
-      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-      \begin{forest} boom
-      [\tsc{k}P,
-          [\tsc{k}]
-          [ϕP
-              [\phantom{x}ϕ\phantom{x}, roof, baseline]
-          ]
-      ]
-      \end{forest}
-      & \phantom{x} &
-    \begin{forest} boom
-      [\tsc{rel}P
-          [\tsc{rel}]
-          [\tsc{k}P
-              [\tsc{k}]
-              [ϕP
-                  [\phantom{x}ϕ\phantom{x}, roof, baseline]
-              ]
-          ]
-      ]
-    \end{forest}\\
-      % \bottomrule
-  \end{tabular}
-   \caption {\tsc{lh} and \tsc{rp} in the internal-only type}
-  \label{fig:rel-lh-intonly-simple-rep}
-\end{figure}
+In the introduction of this chapter, I suggested that in Modern German features of the light head are spelled out in such a way that they form the constituency shown in \ref{ex:mg-lh-complex}.
 
-In the previous section, I showed that relative pronouns in Modern German are constituently structured as in Figure \ref{fig:rel-lh-intonly-simple-rep}. I give a compact version of it in \ref{ex:mg-rp-rep}.
-
-\ex.\label{ex:mg-rp-rep}
+\ex.\label{ex:mg-lh-complex}
 \begin{forest} boom
-  [\tsc{rel}P
-      [\tsc{rel}P,
-      tikz={
-      \node[
-      draw,circle,
-      scale=0.75,
-      fit to=tree]{};
-      }
-          [\phantom{xxx}, roof]
-      ]
-      [\tsc{med}P, s sep = 15mm
-          [\tsc{med}P,
-          tikz={
-          \node[
-          draw,circle,
-          scale=0.75,
-          fit to=tree]{};
-          }
-              [\phantom{xxx}, roof]
-          ]
-          [\tsc{k}P,
-          tikz={
-          \node[
-          draw,circle,
-          scale=0.75,
-          fit to=tree]{};
-          }
-              [\tsc{k}]
-              [\tsc{ind}P
-                  [\phantom{xxx}, roof]
-              ]
-          ]
+  [\tsc{k}P,
+  tikz={
+  \node[label=below:\tit{r/n/m},
+  draw,circle,
+  scale=0.75,
+  fit to=tree]{};
+  }
+      [\tsc{k}]
+      [ϕP
+          [\phantom{xxx}, roof, baseline]
       ]
   ]
 \end{forest}
 
-In this section, I show that light heads in Modern German are constituently structured as in Figure \ref{fig:rel-lh-intonly-simple-rep}. The light head in Modern German forms a constituent within the relative pronoun. I give the structure of the Modern German light head in \ref{ex:mg-lh}.
+In Chapter \ref{ch:the-basic-idea}, I suggested that light heads consist of at least two features: ϕ and \tsc{k}. In this section, I specify the feature content of the light head in more detail.
+Before I dive into the feature content of the light head, I first need to identify it, as it does not surface in headless relatives.
+I consider two kinds of light-headed relatives as the source of the headless relative.
+First, the deletion of the light head is optional, and the light-headed relative is derived from an existing light-headed relative.
+Second, the deletion of the light head is obligatory, and the light-headed relative is derived from a light-headed relative that does not surfaces in Modern German.
+I consider the first option first, and I give two reasons against it.
+However, to identify the exact input structure, I take the light head from the existing light-headed relative as a point of departure, and I modify it in such a way that it is appropriate as a light head for a headless relative.
+I end up claiming that the phi- and case-feature portmanteau of the relative pronoun is the light head in headless relatives, shown below in \ref{ex:mg-lh}.
 
 \ex.\label{ex:mg-lh}
 \begin{forest} boom
     [\tsc{k}P,
     tikz={
-    \node[label=below:\tit{r/n},
+    \node[label=below:\tit{r/n/m},
     draw,circle,
     scale=0.95,
     fit to=tree]{};
@@ -1214,13 +1164,6 @@ In this section, I show that light heads in Modern German are constituently stru
         ]
     ]
 \end{forest}
-
-Before I dive into the feature content of the light head, I first need to identify it, as it does not surface in headless relatives.
-I consider two kinds of light-headed relatives as the source of the headless relative.
-First, the deletion of the light head is optional, and the light-headed relative is derived from an existing light-headed relative.
-Second, the deletion of the light head is obligatory, and the light-headed relative is derived from a light-headed relative that does not surfaces in Modern German.
-I consider the first option first, and I give two reasons against it.
-However, to identify the exact input structure, I take the light head from the existing light-headed relative as a point of departure, and I modify it in such a way that it is appropriate as a light head for a headless relative.
 
 I give an example of a Modern German light-headed relative in \ref{ex:mg-den-wen}.\footnote{
 Modern German also has another light-headed relative, in which the relative pronoun is the \tsc{d}-pronoun. I give an example in \ref{ex:mg-den-den}.
@@ -1319,11 +1262,11 @@ In sum, there are two arguments against the \tit{den}-\tit{wen} relative being t
 
 The light head in the \tit{den}-\tit{wen} relative is a demonstrative. A demonstrative refers back to a linguistic or extra-linguistic antecedent. Consider the context in \ref{ex:mg-context-def} again. The demonstrative \tit{den} in the \tit{den}-\tit{wen} relative refers back to the friend of Jan that he likes, and the construction is grammatical. Now consider the context in \ref{ex:mg-context-univ} again. In this case, there is no antecedent for the demonstrative \tit{den} to refer back to, and the structure is infelicitous.
 
-I zoom in on the internal structure of the demonstrative \tit{den} to investigate what it is about the demonstrative that forces the definite-like interpretation. The demonstrative consists of the three morphemes \tit{d}, \tit{e} and \tit{n}. Two of its morphemes are identical to the \tsc{wh}-relative pronoun: (1) \tit{n}, which spells out pronominal, number, gender and case features, and (2) the \tit{e} which spells out deictic features. One morpheme differs: the \tit{d}, which establishes a definite reference. The two morphemes that force the definite-interpretation are the \tit{d} and the \tit{e}. The \tit{e} establishes a reference, and the \tit{d} makes this reference a definite one.
+I zoom in on the internal structure of the demonstrative \tit{den} to investigate what it is about the demonstrative that forces the definite-like interpretation. The demonstrative consists (at least) of the two morphemes \tit{de} and \tit{n}. One of these morphemes are identical to the \tsc{wh}-relative pronoun: the \tit{n}, which spells out pronominal, number, gender and case features. The other morpheme differs: the \tit{de}, which establishes a definite reference.
 
 So far, I established that the \tit{den}-\tit{wen} relative cannot be the source from which the headless relative is derived. However, there must be some structure that is the source. I propose that this is a light-headed relative in which the head is even lighter than the head in the \tit{den}-\tit{wen} relative: it is an extra light head.
 
-I propose that the extra light head is the element that is left once the morphemes \tit{d} and \tit{e} are absent. This is the morpheme that is the final consonant of the relative pronoun. I give the extra light-headed relative from which the \tit{wen}-relative is derived in \ref{ex:mg-real-base}. The brackets around the light head indicate that it is obligatorily deleted.\footnote{
+I propose that the extra light head is the element that is left once the morphemes \tit{de} is absent. This is the morpheme that is the final consonant of the relative pronoun. I give the extra light-headed relative from which the \tit{wen}-relative is derived in \ref{ex:mg-real-base}. The brackets around the light head indicate that it is obligatorily deleted.\footnote{
 The light head and the extra light head I discuss resemble the strong and weak definite in \citet{schwarz2009}, at least morphologically (although my light head is always obligatorily deleted). \posscitet{schwarz2009} strong definite is anaphoric in nature, and the weak definite encodes uniqueness. I give an example of a strong definite in \ref{ex:mg-florian-strong}. The strong definite is \tit{dem} that precedes \tit{Freund} `friend'. It refers back to the linguistic antecedent \tit{einen Freund} `a friend'.
 
 \exg. Hans hat heute einen Freund zum Essen mit nach Hause gebracht. Er hat uns vorher ein Foto von dem Freund gezeigt.\\
@@ -1356,7 +1299,7 @@ In the remainder of this section, I discuss the two extra light heads that I com
 \bg. m\\
  \tsc{lh}.\tsc{an}.\tsc{dat}\\
 
-In Chapter \ref{ch:the-basic-idea}, I suggested that the relative pronoun contains at least one features more than the extra light head. In my proposal, it is actually five features, namely \tsc{wh}, \tsc{rel}, \tsc{dx}\scsub{1}, \tsc{dx}\scsub{2} and \tsc{c}. This leaves the functional for the extra light head as shown in \ref{ex:fseq-elh}.
+In Chapter \ref{ch:the-basic-idea}, I suggested that the relative pronoun contains at least one features more than the extra light head. In my proposal, it is actually two features, namely \tsc{wh} and \tsc{rel}. This leaves the functional for the extra light head as shown in \ref{ex:fseq-elh}.
 
 \ex.\label{ex:fseq-elh}
 \begin{forest} boom
@@ -1528,7 +1471,7 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
   \center
   \begin{adjustbox}{max height=0.9\textheight}
   \begin{tabular}[b]{c}
-        % \toprule
+        \toprule
         \tsc{acc} extra light head \tit{n}\\
         \cmidrule{1-1}
       \begin{forest} boom
@@ -1554,7 +1497,7 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
         ]
       \end{forest}
       \\
-      % \toprule
+      \toprule
       \tsc{acc} relative pronoun \tit{we-n}
       \\
       \cmidrule{1-1}
@@ -1585,7 +1528,7 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
           ]
         \end{forest}
         \\
-      % \bottomrule
+      \bottomrule
   \end{tabular}
   \end{adjustbox}
   \caption {Modern German \tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{acc} → \tit{wen}}
@@ -1614,7 +1557,7 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
   \center
   \begin{adjustbox}{max height=0.9\textheight}
   \begin{tabular}[b]{c}
-      % \toprule
+      \toprule
       \tsc{acc} extra light head \tit{n}
       \\
       \cmidrule{1-1}
@@ -1641,7 +1584,7 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
         ]
       \end{forest}
       \\
-      % \toprule
+      \toprule
       \tsc{dat} relative pronoun \tit{we-m}
       \\
       \cmidrule{1-1}
@@ -1677,7 +1620,7 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
             ]
         \end{forest}
         \\
-      % \bottomrule
+      \bottomrule
   \end{tabular}
   \end{adjustbox}
    \caption {Modern German \tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{dat} → \tit{wem}}
@@ -1713,7 +1656,7 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
   \center
   \begin{adjustbox}{max height=0.9\textheight}
   \begin{tabular}[b]{c}
-      % \toprule
+      \toprule
       \tsc{dat} extra light head \tit{m}
       \\
       \cmidrule{1-1}
@@ -1744,7 +1687,7 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
         ]
       \end{forest}
       \\
-      % \toprule
+      \toprule
       \tsc{dat} relative pronoun \tit{we-n}
       \\
       \cmidrule{1-1}
@@ -1775,7 +1718,7 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
             ]
         \end{forest}
         \\
-      % \bottomrule
+      \bottomrule
   \end{tabular}
   \end{adjustbox}
    \caption {Modern German \tsc{ext}\scsub{dat} vs. \tsc{int}\scsub{acc} ↛ \tit{m}/\tit{wen}}
