--- a/thesis.tex
+++ b/thesis.tex
@@ -87,8 +87,7 @@ thanks
 \include{the-basic-idea}
 \include{deriving-internalonly}
 \include{deriving-matching}
-\include{discussing-unrestricted}
-\include{larger-syntax}
+\include{deriving-unrestricted}
 
 \bookmarksetup{startatroot}
 \include{discussion}
