--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -302,6 +302,8 @@ The hierarchy is schematically represented in Figure \ref{fig:agr-sub-do-io}. It
 
 \begin{figure}[ht]
   \centering
+  \begin{tabular}[b]{c}
+    \toprule
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
     \draw [fill opacity=0.4, fill=LG] (0,0.5) circle (1.75);
@@ -310,7 +312,9 @@ The hierarchy is schematically represented in Figure \ref{fig:agr-sub-do-io}. It
     \node[] at (0,2.75) {subject};
     \node[] at (0,1.5) {direct object};
     \node[align=center] at (0,0) {indirect\\ object};
-  \end{tikzpicture}
+  \end{tikzpicture}\\
+    \bottomrule
+  \end{tabular}
   \caption{Agreement hierarchy}
   \label{fig:agr-sub-do-io}
 \end{figure}
@@ -347,6 +351,8 @@ Putting the languages in \posscitet{moravcsik1978} schema gives the result as sh
 
  \begin{figure}[ht]
    \centering
+   \begin{tabular}[b]{c}
+     \toprule
    \begin{tikzpicture}
      \draw (0,1) circle (2.25);
      \draw [fill opacity=0.4, fill=LG] (0,0.5) circle (1.75);
@@ -360,7 +366,9 @@ Putting the languages in \posscitet{moravcsik1978} schema gives the result as sh
      \node[] at (2.25,2) {\footnotesize{● German}};
      \node[] at (2,1) {\footnotesize{● Hungarian}};
      \node[] at (1.375,0) {\footnotesize{● Basque}};
-   \end{tikzpicture}
+   \end{tikzpicture}\\
+    \bottomrule
+ \end{tabular}
    \caption{Agreement hierarchy with languages}
    \label{fig:agr-sub-do-io-lang}
  \end{figure}
@@ -410,13 +418,17 @@ The second type of evidence that \citeauthor{bobaljik2006} gives comes from erga
 
 \begin{figure}[ht]
   \centering
+  \begin{tabular}[b]{c}
+    \toprule
   \begin{tikzpicture}
     \node[] at (0,1) {A};
     \node[] at (1.5,1) {O};
     \node[] at (0.75,0) {S};
 
     \draw[rotate around={45:(0.375,0.5)}] (0.375,0.5) ellipse (0.5 and 1);
-  \end{tikzpicture}
+  \end{tikzpicture}\\
+    \bottomrule
+\end{tabular}
   \caption{Nominative-accusative alignment}
   \label{fig:nom-acc-lang}
 \end{figure}
@@ -425,13 +437,17 @@ In ergative-absolutive languages, the alignment is different. The subject of an 
 
 \begin{figure}[ht]
   \centering
+  \begin{tabular}[b]{c}
+    \toprule
   \begin{tikzpicture}
     \node[] at (0,1) {A};
     \node[] at (1.5,1) {O};
     \node[] at (0.75,0) {S};
 
     \draw[rotate around={135:(1,0.5)}] (1,0.5) ellipse (0.5 and 1);
-  \end{tikzpicture}
+  \end{tikzpicture}\\
+    \bottomrule
+\end{tabular}
   \caption{Ergative-absolutive alignment}
   \label{fig:erg-abs-lang}
 \end{figure}
@@ -444,6 +460,8 @@ Note here that nominative-accusative languages use the same case marking for the
 
 \begin{figure}[ht]
   \centering
+  \begin{tabular}[b]{c}
+    \toprule
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
     \draw [fill opacity=0.4, fill=LG] (0,0.5) circle (1.75);
@@ -457,7 +475,9 @@ Note here that nominative-accusative languages use the same case marking for the
     \node[] at (2.25,2) {\footnotesize{● German}};
     \node[] at (2,1) {\footnotesize{● Hungarian}};
     \node[] at (1.375,0) {\footnotesize{● Basque}};
-  \end{tikzpicture}
+  \end{tikzpicture}\\
+    \bottomrule
+\end{tabular}
   \caption{Agreement hierarchy (case)}
   \label{fig:agr-def-dep-dat}
 \end{figure}
@@ -472,6 +492,8 @@ In the languages I discuss in this dissertation, I focus on languages that have 
 
 \begin{figure}[ht]
   \centering
+  \begin{tabular}[b]{c}
+    \toprule
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
     \draw [fill opacity=0.4, fill=LG] (0,0.5) circle (1.75);
@@ -480,7 +502,9 @@ In the languages I discuss in this dissertation, I focus on languages that have 
     \node[] at (0,2.75) {\ac{nom}};
     \node[] at (0,1.75) {\ac{acc}};
     \node[] at (0,0) {\ac{dat}};
-  \end{tikzpicture}
+  \end{tikzpicture}\\
+    \bottomrule
+\end{tabular}
   \caption{Agreement hierarchy (\tsc{nom}/\tsc{acc/\tsc{dat}})}
   \label{fig:agr-nom-acc-dat}
 \end{figure}
@@ -505,6 +529,8 @@ The implicational hierarchy is schematically represented in Figure \ref{fig:rel-
 
 \begin{figure}[ht]
   \centering
+  \begin{tabular}[b]{c}
+    \toprule
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
     \draw [fill opacity=0.4, fill=LG] (0,0.5) circle (1.75);
@@ -513,7 +539,9 @@ The implicational hierarchy is schematically represented in Figure \ref{fig:rel-
     \node[] at (0,2.75) {subject};
     \node[] at (0,1.5) {direct object};
     \node[align=center] at (0,0) {indirect\\ object};
-  \end{tikzpicture}
+  \end{tikzpicture}\\
+    \bottomrule
+\end{tabular}
   \caption{Relativization hierarchy}
   \label{fig:rel-sub-do-io}
 \end{figure}
@@ -624,6 +652,8 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
 
  \begin{figure}[ht]
    \centering
+   \begin{tabular}[b]{c}
+     \toprule
    \begin{tikzpicture}
      \draw (0,1) circle (2.25);
      \draw [fill opacity=0.4, fill=LG] (0,0.5) circle (1.75);
@@ -636,7 +666,9 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
      \node[] at (2.25,2) {\footnotesize{● Malagasy/German}};
      \node[] at (2,1) {\footnotesize{● Malay/Finnish}};
      \node[] at (1.375,0) {\footnotesize{● Basque}};
-   \end{tikzpicture}
+   \end{tikzpicture}\\
+    \bottomrule
+ \end{tabular}
    \caption{Relativization hierarchy with languages}
    \label{fig:rel-sub-do-io-lang}
  \end{figure}
@@ -673,6 +705,8 @@ In conclusion, just like the agreement hierarchy, the relativization hierarchy i
 
 \begin{figure}[ht]
   \centering
+  \begin{tabular}[b]{c}
+    \toprule
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
     \draw [fill opacity=0.4, fill=LG] (0,0.5) circle (1.75);
@@ -685,7 +719,9 @@ In conclusion, just like the agreement hierarchy, the relativization hierarchy i
     \node[] at (2.25,2) {\footnotesize{● Malagasy/German}};
     \node[] at (2,1) {\footnotesize{● Malay/Finnish}};
     \node[] at (1.375,0) {\footnotesize{● Basque}};
-  \end{tikzpicture}
+  \end{tikzpicture}\\
+    \bottomrule
+\end{tabular}
   \caption{Relativization hierarchy (case)}
   \label{fig:rel-def-dep-dat}
 \end{figure}
@@ -700,6 +736,8 @@ In the languages I discuss in this dissertation, I focus on languages that have 
 
 \begin{figure}[ht]
   \centering
+  \begin{tabular}[b]{c}
+    \toprule
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
     \draw [fill opacity=0.4, fill=LG] (0,0.5) circle (1.75);
@@ -708,7 +746,9 @@ In the languages I discuss in this dissertation, I focus on languages that have 
     \node[] at (0,2.75) {nominative};
     \node[] at (0,1.5) {accusative};
     \node[align=center] at (0,0) {dative};
-  \end{tikzpicture}
+  \end{tikzpicture}\\
+    \bottomrule
+\end{tabular}
   \caption{Relativization hierarchy (\tsc{nom}/\tsc{acc}/\tsc{dat})}
   \label{fig:rel-nom-acc-dat}
 \end{figure}
