--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -894,8 +894,8 @@ At a later stage in the derivation, the light head is built. The last features o
       \end{forest}\\
       \bottomrule
   \end{tabular}
-   \caption {\tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{nom} in the unrestricted type}
-  \label{fig:nom-nom-unres}
+   \caption {\tsc{ext}\scsub{∅} vs. \tsc{int}\scsub{nom} in the unrestricted type}
+  \label{fig:empty-nom-unres}
 \end{figure}
 
 then the F1 is merged
